--- a/inkstand-ms/pom.xml
+++ b/inkstand-ms/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>io.inkstand</groupId>
 		<artifactId>inkstand</artifactId>
-		<version>0.1.2</version>
+		<version>0.2.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>inkstand-ms</artifactId>
 	<name>${project.groupId}:${project.artifactId}</name>
