--- a/inkstand-jcr-jackrabbit/pom.xml
+++ b/inkstand-jcr-jackrabbit/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>io.inkstand</groupId>
 		<artifactId>inkstand</artifactId>
-		<version>0.1.3-SNAPSHOT</version>
+		<version>0.1.3</version>
 	</parent>
 	<artifactId>inkstand-jcr-jackrabbit</artifactId>
 	<name>${project.groupId}:${project.artifactId}</name>
@@ -72,18 +72,18 @@
 		<dependency>
             <groupId>io.inkstand</groupId>
             <artifactId>inkstand-core</artifactId>
-            <version>0.1.3-SNAPSHOT</version>
+            <version>0.1.3</version>
         </dependency>
 		<!-- JCR stereotypes -->
 		<dependency>
 			<groupId>io.inkstand</groupId>
 			<artifactId>inkstand-jcr</artifactId>
-			<version>0.1.3-SNAPSHOT</version>
+			<version>0.1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>io.inkstand</groupId>
 			<artifactId>inkstand-jcr</artifactId>
-			<version>0.1.3-SNAPSHOT</version>
+			<version>0.1.3</version>
 			<scope>test</scope>
 			<type>test-jar</type>
 		</dependency>
