--- a/inkstand-ms/pom.xml
+++ b/inkstand-ms/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>io.inkstand</groupId>
 		<artifactId>inkstand</artifactId>
-		<version>0.1.3-SNAPSHOT</version>
+		<version>0.1.3</version>
 	</parent>
 	<artifactId>inkstand-ms</artifactId>
 	<name>${project.groupId}:${project.artifactId}</name>
