--- a/inkstand-core/pom.xml
+++ b/inkstand-core/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>io.inkstand</groupId>
         <artifactId>inkstand</artifactId>
-        <version>0.2.0-SNAPSHOT</version>
+        <version>0.1.3</version>
     </parent>
     <artifactId>inkstand-core</artifactId>
     <name>${project.groupId}:${project.artifactId}</name>
