--- a/inkstand-http-undertow/pom.xml
+++ b/inkstand-http-undertow/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>io.inkstand</groupId>
 		<artifactId>inkstand</artifactId>
-		<version>0.2.0-SNAPSHOT</version>
+		<version>0.1.3</version>
 	</parent>
 
 	<artifactId>inkstand-http-undertow</artifactId>
@@ -35,17 +35,17 @@
 		<dependency>
 			<groupId>io.inkstand</groupId>
 			<artifactId>inkstand-core</artifactId>
-			<version>0.2.0-SNAPSHOT</version>
+			<version>0.1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>io.inkstand</groupId>
 			<artifactId>inkstand-ms</artifactId>
-			<version>0.2.0-SNAPSHOT</version>
+			<version>0.1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>io.inkstand</groupId>
 			<artifactId>inkstand-security</artifactId>
-			<version>0.2.0-SNAPSHOT</version>
+			<version>0.1.3</version>
 		</dependency>
 		<!-- Undertow -->
 		<dependency>
