--- a/inkstand-jcr/pom.xml
+++ b/inkstand-jcr/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>io.inkstand</groupId>
 		<artifactId>inkstand</artifactId>
-		<version>0.2.0-SNAPSHOT</version>
+		<version>0.1.3</version>
 	</parent>
 	<artifactId>inkstand-jcr</artifactId>
 	<name>${project.groupId}:${project.artifactId}</name>
@@ -44,7 +44,7 @@
 		<dependency>
             <groupId>io.inkstand</groupId>
             <artifactId>inkstand-core</artifactId>
-            <version>0.2.0-SNAPSHOT</version>
+            <version>0.1.3</version>
         </dependency>
 		<dependency>
             <groupId>io.inkstand</groupId>
