--- a/inkstand-deployments/pom.xml
+++ b/inkstand-deployments/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>io.inkstand</groupId>
     <artifactId>inkstand</artifactId>
-    <version>0.1.3</version>
+    <version>0.2.0-SNAPSHOT</version>
   </parent>
   <artifactId>inkstand-deployments</artifactId>
   <packaging>pom</packaging>
