--- a/inkstand-security/pom.xml
+++ b/inkstand-security/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>io.inkstand</groupId>
         <artifactId>inkstand</artifactId>
-        <version>0.1.3</version>
+        <version>0.2.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>inkstand-security</artifactId>
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>io.inkstand</groupId>
             <artifactId>inkstand-core</artifactId>
-            <version>0.1.3</version>
+            <version>0.2.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
