--- a/inkstand-jcr/pom.xml
+++ b/inkstand-jcr/pom.xml
@@ -40,6 +40,11 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-common</artifactId>
+			<scope>test</scope>
+		</dependency>
 		
 		<dependency>
             <groupId>io.inkstand</groupId>
