INK-39 PublicService profile should be default
- made public service default
- added stereotyped version of default
- added integration test module incl tests for public service
- added IT coverage for jacoco

--- a/pom.xml
+++ b/pom.xml
@@ -38,15 +38,11 @@
 		<module>inkstand-security</module>
 		<module>inkstand-parent</module>
 		<module>inkstand-cdi</module>
+		<module>inkstand-it</module>
 	</modules>
 
 	<dependencies>
 		<!-- Code Coverage -->
-		<dependency>
-			<groupId>org.jacoco</groupId>
-			<artifactId>jacoco-maven-plugin</artifactId>
-			<scope>provided</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
