--- a/inkstand-parent/pom.xml
+++ b/inkstand-parent/pom.xml
@@ -69,20 +69,19 @@
         <connection>scm:git:https://github.com/inkstand-io/inkstand.git</connection>
     </scm>
 
+
     <properties>
+        <skipTests>false</skipTests>
         <!-- Common Libraries Versions -->
         <logging.slf4j.version>1.7.6</logging.slf4j.version>
         <logging.log4j.version>2.0-rc1</logging.log4j.version>
 
         <!-- Sonar and Code Coverage -->
-        <coverage.unit.test.path>${project.basedir}/target/jacoco-ut.exec</coverage.unit.test.path>
-        <coverage.integration.test.path>${project.basedir}/target/jacoco-it.exec</coverage.integration.test.path>
         <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
-        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-        <sonar.jacoco.reportPath>${coverage.unit.test.path}</sonar.jacoco.reportPath>
-        <sonar.jacoco.itReportPath>${coverage.integration.test.path}</sonar.jacoco.itReportPath>
+        <sonar.exclusions>file:**/generated-sources/**</sonar.exclusions>
         <sonar.language>java</sonar.language>
-        <coverage.jacoco.version>0.7.2.201409121644</coverage.jacoco.version>
+
+        <coverage.jacoco.version>0.7.4.201502262128</coverage.jacoco.version>
 
         <!-- Test lib versions -->
         <test.junit.version>4.11</test.junit.version>
@@ -90,7 +89,7 @@
         <test.htmlunit.version>2.8</test.htmlunit.version>
         <test.scribble.version>0.1.3</test.scribble.version>
         <test.jsonassert.version>1.2.3</test.jsonassert.version>
-        <test.arquillian.version>1.1.5.Final</test.arquillian.version>
+        <test.arquillian.version>1.1.8.Final</test.arquillian.version>
         <test.arquillian.weld.version>1.0.0.CR8</test.arquillian.weld.version>
         <!-- javax library versions -->
         <javax.jcr.version>2.0</javax.jcr.version>
@@ -99,6 +98,7 @@
         <javax.validation-api.version>1.0.0.GA</javax.validation-api.version>
         <!-- Apache Library Version -->
         <apache.commons.io.version>2.4</apache.commons.io.version>
+        <apache.commons.codec.version>1.10</apache.commons.codec.version>
         <apache.deltaspike.version>1.4.0</apache.deltaspike.version>
         <apache.jackrabbit.version>2.10.1</apache.jackrabbit.version>
         <apache.ds.server.version>2.0.0-M20</apache.ds.server.version>
@@ -109,9 +109,6 @@
         <jboss.undertow.version>1.2.6.Final</jboss.undertow.version>
         <!-- additional  libraries -->
         <jersey.common.version>2.17</jersey.common.version>
-
-        <!-- Library Versions -->
-        <halite.version>0.0.15</halite.version>
     </properties>
 
     <dependencyManagement>
@@ -143,6 +140,11 @@
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${apache.commons.io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${apache.commons.codec.version}</version>
             </dependency>
             <!-- Apache Deltaspike -->
             <dependency>
@@ -219,6 +221,11 @@
                 <artifactId>undertow-servlet</artifactId>
                 <version>${jboss.undertow.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.jboss.resteasy</groupId>
+                <artifactId>resteasy-undertow</artifactId>
+                <version>${jboss.resteasy.version}</version>
+            </dependency>
             <!-- Test Dependencies -->
             <dependency>
                 <groupId>junit</groupId>
@@ -235,8 +242,8 @@
                 <groupId>org.jboss.arquillian</groupId>
                 <artifactId>arquillian-bom</artifactId>
                 <version>${test.arquillian.version}</version>
-                <type>pom</type>
                 <scope>import</scope>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.jboss.arquillian.container</groupId>
@@ -294,6 +301,7 @@
             </activation>
             <properties>
                 <surefireArgLine />
+                <failsafeArgLine />
                 <tests.json.strict.validation.disabled>false</tests.json.strict.validation.disabled>
             </properties>
         </profile>
@@ -307,34 +315,10 @@
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>${coverage.jacoco.version}</version>
-                        <configuration>
-                            <skip>${skipTests}</skip>
-                            <includes>
-                                <include>io.inkstand.*</include>
-                            </includes>
-                            <excludes>
-                                <exclude>io.inkstand.scribble.*</exclude>
-                            </excludes>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>prepare-agent</id>
-                                <goals>
-                                    <goal>prepare-agent</goal>
-                                </goals>
-                                <configuration>
-                                    <destFile>${coverage.unit.test.path}</destFile>
-                                    <append>true</append>
-                                    <propertyName>surefireArgLine</propertyName>
-                                </configuration>
-                            </execution>
-                        </executions>
                     </plugin>
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>sonar-maven-plugin</artifactId>
-                        <version>2.4</version>
                     </plugin>
                 </plugins>
             </build>
@@ -349,7 +333,6 @@
                     <plugin>
                         <groupId>org.pitest</groupId>
                         <artifactId>pitest-maven</artifactId>
-                        <version>1.1.3</version>
                         <configuration>
                             <targetClasses>
                                 <param>io.inkstand.*</param>
@@ -385,13 +368,13 @@
             <id>release</id>
             <properties>
                 <surefireArgLine />
+                <failsafeArgLine />
             </properties>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>2.2.1</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
@@ -404,7 +387,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.10.1</version>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -422,7 +404,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.5</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -436,7 +417,6 @@
                     <plugin>
                         <groupId>external.atlassian.jgitflow</groupId>
                         <artifactId>jgitflow-maven-plugin</artifactId>
-                        <version>1.0-m4.3</version>
                         <configuration>
                             <enableSshAgent>false</enableSshAgent>
                             <autoVersionSubmodules>true</autoVersionSubmodules>
@@ -454,7 +434,6 @@
                     <plugin>
                         <groupId>org.sonatype.plugins</groupId>
                         <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.6.5</version>
                         <extensions>true</extensions>
                         <configuration>
                             <serverId>ossrh</serverId>
@@ -467,38 +446,147 @@
         </profile>
     </profiles>
 
+
+
     <build>
         <defaultGoal>clean verify</defaultGoal>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.2.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.1</version>
+                    <configuration>
+                        <source>1.7</source>
+                        <target>1.7</target>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>1.5</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>2.18.1</version>
+                    <configuration>
+                        <forkCount>1</forkCount>
+                        <reuseForks>false</reuseForks>
+                        <runOrder>random</runOrder>
+                        <enableAssertions>true</enableAssertions>
+                        <argLine>${failsafeArgLine}</argLine>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>integration-test</goal>
+                                <goal>verify</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.17</version>
+                    <configuration>
+                        <forkCount>1</forkCount>
+                        <reuseForks>false</reuseForks>
+                        <runOrder>random</runOrder>
+                        <enableAssertions>true</enableAssertions>
+                        <argLine>${surefireArgLine}</argLine>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.10.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${coverage.jacoco.version}</version>
+                    <configuration>
+                        <skip>${skipTests}</skip>
+                        <inclBootstrapClasses>true</inclBootstrapClasses>
+                        <includes>
+                            <include>io.inkstand.*</include>
+                        </includes>
+                        <excludes>
+                            <exclude>io.inkstand.scribble.*</exclude>
+                            <exclude>io.inkstand.it.*</exclude>
+                        </excludes>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>prepare-agent</id>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                            <configuration>
+                                <destFile>target/jacoco.exec</destFile>
+                                <append>true</append>
+                                <propertyName>surefireArgLine</propertyName>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <id>prepare-it-agent</id>
+                            <phase>pre-integration-test</phase>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                            <configuration>
+                                <destFile>${session.executionRootDirectory}/target/jacoco-it.exec</destFile>
+                                <append>true</append>
+                                <propertyName>failsafeArgLine</propertyName>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.pitest</groupId>
+                    <artifactId>pitest-maven</artifactId>
+                    <version>1.1.3</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.sonatype.plugins</groupId>
+                    <artifactId>nexus-staging-maven-plugin</artifactId>
+                    <version>1.6.5</version>
+                </plugin>
+                <plugin>
+                    <groupId>external.atlassian.jgitflow</groupId>
+                    <artifactId>jgitflow-maven-plugin</artifactId>
+                    <version>1.0-m4.3</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
+
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>Inkstand</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
                 <configuration>
-                    <forkCount>1</forkCount>
-                    <reuseForks>false</reuseForks>
-                    <runOrder>random</runOrder>
-                    <enableAssertions>true</enableAssertions>
-                    <argLine>-Xms16M -Xmx512M ${surefireArgLine}</argLine>
                     <systemPropertyVariables>
                         <tests.json.strict.validation.disabled>${tests.json.strict.validation.disabled}</tests.json.strict.validation.disabled>
                     </systemPropertyVariables>
@@ -507,46 +595,10 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${coverage.jacoco.version}</version>
-                <configuration>
-                    <skip>${skipTests}</skip>
-                    <includes>
-                        <include>io.inkstand.*</include>
-                    </includes>
-                    <excludes>
-                        <exclude>io.inkstand.scribble.*</exclude>
-                    </excludes>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>prepare-agent</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                        <configuration>
-                            <destFile>${coverage.unit.test.path}</destFile>
-                            <append>true</append>
-                            <propertyName>surefire.argLine</propertyName>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>prepare-it-agent</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                        <configuration>
-                            <destFile>${coverage.integration.test.path}</destFile>
-                            <propertyName>failsafe.argLine</propertyName>
-                            <append>true</append>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
-                <version>2.4</version>
             </plugin>
         </plugins>
     </build>
