INK-44 TQA build fails: Integration Test module are not ignored
- set failWhenNoMutations to false to exclude test-only modules

--- a/inkstand-parent/pom.xml
+++ b/inkstand-parent/pom.xml
@@ -340,6 +340,7 @@
                             <targetTests>
                                 <param>io.inkstand.*</param>
                             </targetTests>
+                            <failWhenNoMutations>false</failWhenNoMutations>
                             <mutators>
                                 <mutator>DEFAULTS</mutator>
                                 <mutator>REMOVE_CONDITIONALS</mutator>
