--- a/inkstand-it/pom.xml
+++ b/inkstand-it/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>inkstand-it-defaultpublic</module>
         <module>inkstand-it-publicservice</module>
+        <module>inkstand-it-protectedservice</module>
     </modules>
     <packaging>pom</packaging>
 
