--- a/inkstand-parent/pom.xml
+++ b/inkstand-parent/pom.xml
@@ -87,7 +87,7 @@
         <test.junit.version>4.11</test.junit.version>
         <test.mockito.version>1.9.5</test.mockito.version>
         <test.htmlunit.version>2.8</test.htmlunit.version>
-        <test.scribble.version>0.2.0-alpha2</test.scribble.version>
+        <test.scribble.version>0.2.0-alpha3</test.scribble.version>
         <test.jsonassert.version>1.2.3</test.jsonassert.version>
         <test.arquillian.version>1.1.8.Final</test.arquillian.version>
         <test.arquillian.weld.version>1.0.0.CR8</test.arquillian.weld.version>
@@ -345,6 +345,7 @@
                                 <mutator>DEFAULTS</mutator>
                                 <mutator>REMOVE_CONDITIONALS</mutator>
                             </mutators>
+                            <verbose>true</verbose>
                             <timestampedReports>
                                 false
                             </timestampedReports>
