--- a/inkstand-it/pom.xml
+++ b/inkstand-it/pom.xml
@@ -31,6 +31,7 @@
         <module>inkstand-it-defaultpublic</module>
         <module>inkstand-it-publicservice</module>
         <module>inkstand-it-protectedservice</module>
+        <module>inkstand-it-staticcontent</module>
     </modules>
     <packaging>pom</packaging>
 
