INK-47 Support serving static content from a zip archive via HTTP
- added prototype implementation

--- a/inkstand-deployments/pom.xml
+++ b/inkstand-deployments/pom.xml
@@ -27,6 +27,7 @@
   <description>Deployments for Inkstand.</description>
   <modules>
   	<module>inkstand-undertow-resteasy</module>
+    <module>inkstand-undertow-staticcontent</module>
   </modules>
 
 
