--- a/inkstand-deployments/inkstand-undertow-staticcontent/pom.xml
+++ b/inkstand-deployments/inkstand-undertow-staticcontent/pom.xml
@@ -19,37 +19,46 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>inkstand-it</artifactId>
+        <artifactId>inkstand-deployments</artifactId>
         <groupId>io.inkstand</groupId>
         <version>0.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>inkstand-it-staticcontent</artifactId>
-    <name>${project.groupId}:${project.artifactId}</name>
-
-    <description>
-        Integration Test of a PublicService being explicitly defined as PublicService.
-    </description>
+    <artifactId>inkstand-undertow-staticcontent</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>io.inkstand</groupId>
+            <artifactId>scribble</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.inkstand</groupId>
+            <artifactId>inkstand-core</artifactId>
+            <version>0.2.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>io.inkstand</groupId>
             <artifactId>inkstand-http-undertow</artifactId>
             <version>0.2.0-SNAPSHOT</version>
         </dependency>
+
         <dependency>
-            <groupId>io.inkstand</groupId>
-            <artifactId>inkstand-undertow-staticcontent</artifactId>
-            <version>0.2.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>net.sourceforge.htmlunit</groupId>
-            <artifactId>htmlunit</artifactId>
-            <scope>test</scope>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
         </dependency>
 
+
+        <!-- Deltaspike -->
+        <dependency>
+            <groupId>org.apache.deltaspike.core</groupId>
+            <artifactId>deltaspike-core-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.deltaspike.core</groupId>
+            <artifactId>deltaspike-core-impl</artifactId>
+        </dependency>
     </dependencies>
-
 
 </project>
