--- a/inkstand-deployments/inkstand-undertow-staticcontent/pom.xml
+++ b/inkstand-deployments/inkstand-undertow-staticcontent/pom.xml
@@ -48,7 +48,10 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
 
         <!-- Deltaspike -->
         <dependency>
