--- a/inkstand-deployments/inkstand-undertow-staticcontent/pom.xml
+++ b/inkstand-deployments/inkstand-undertow-staticcontent/pom.xml
@@ -24,8 +24,8 @@
         <version>0.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>inkstand-undertow-staticcontent</artifactId>
+    <name>${project.groupId}:${project.artifactId}</name>
 
     <dependencies>
         <dependency>
