INK-53 HttpServer Launcher
- killed mutants

--- a/inkstand-parent/pom.xml
+++ b/inkstand-parent/pom.xml
@@ -367,6 +367,9 @@
                                 <param>XML</param>
                                 <param>HTML</param>
                             </outputFormats>
+                            <jvmArgs>
+                                <value>-Dtests.mode=pit</value>
+                            </jvmArgs>
                         </configuration>
                         <executions>
                             <execution>
