INK-14 Management API on separate port
- added optional management deployment option

--- a/inkstand-it/pom.xml
+++ b/inkstand-it/pom.xml
@@ -32,6 +32,7 @@
         <module>inkstand-it-publicservice</module>
         <module>inkstand-it-protectedservice</module>
         <module>inkstand-it-staticcontent</module>
+        <module>inkstand-it-defaultmgmt</module>
     </modules>
     <packaging>pom</packaging>
 
