--- a/inkstand-it/inkstand-it-defaultmgmt/pom.xml
+++ b/inkstand-it/inkstand-it-defaultmgmt/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>inkstand-undertow-resteasy</artifactId>
             <version>0.2.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.0.4</version>
+        </dependency>
     </dependencies>
 
 </project>
