INK-14 Management API on separate port
- added web servlet auto discovery prototype

--- a/inkstand-cdi/pom.xml
+++ b/inkstand-cdi/pom.xml
@@ -36,6 +36,7 @@
     <modules>
         <module>inkstand-cdi-globalalternative</module>
         <module>inkstand-cdi-resourceautodiscovery</module>
+        <module>inkstand-cdi-webdiscovery</module>
     </modules>
 
     <dependencies>
