--- a/inkstand-it/inkstand-it-defaultmgmt/pom.xml
+++ b/inkstand-it/inkstand-it-defaultmgmt/pom.xml
@@ -44,9 +44,9 @@
             <version>0.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.glassfish</groupId>
-            <artifactId>javax.json</artifactId>
-            <version>1.0.4</version>
+            <groupId>io.inkstand</groupId>
+            <artifactId>inkstand-undertow-mgmt</artifactId>
+            <version>0.2.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
