INK-14 Management API on separate port
- added test for deployment provider

--- a/inkstand-parent/pom.xml
+++ b/inkstand-parent/pom.xml
@@ -142,6 +142,11 @@
                 <artifactId>validation-api</artifactId>
                 <version>${javax.validation-api.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.glassfish</groupId>
+                <artifactId>javax.json</artifactId>
+                <version>${javax.json.version}</version>
+            </dependency>
 
             <!-- Apache Commons -->
             <dependency>
