--- a/inkstand-deployments/inkstand-mgmt-web/pom.xml
+++ b/inkstand-deployments/inkstand-mgmt-web/pom.xml
@@ -15,9 +15,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>io.inkstand</groupId>
+            <artifactId>inkstand-core</artifactId>
+            <version>0.2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.json</artifactId>
-            <version>1.0.4</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
