INK-14 Management API on separate port
- extended servlet test

--- a/inkstand-deployments/inkstand-mgmt-web/pom.xml
+++ b/inkstand-deployments/inkstand-mgmt-web/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>javax.servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.skyscreamer</groupId>
+            <artifactId>jsonassert</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
