INK-14 Management API on separate port
- added state handling to controller and microservice

--- a/inkstand-ms/pom.xml
+++ b/inkstand-ms/pom.xml
@@ -34,5 +34,10 @@
 			<groupId>org.jboss.weld.se</groupId>
 			<artifactId>weld-se</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.inkstand</groupId>
+			<artifactId>scribble</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
