--- a/inkstand-it/inkstand-it-jmxmgmt/pom.xml
+++ b/inkstand-it/inkstand-it-jmxmgmt/pom.xml
@@ -1,20 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  ~ Copyright 2015 Gerald Muecke, gerald.muecke@gmail.com
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~     http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -25,12 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>inkstand-it-defaultmgmt</artifactId>
-    <name>${project.groupId}:${project.artifactId}</name>
-
-    <description>
-        Integration Test of the default management extension for Inkstand.
-    </description>
+    <artifactId>inkstand-it-jmxmgmt</artifactId>
 
     <dependencies>
         <dependency>
@@ -48,12 +27,20 @@
             <artifactId>inkstand-undertow-mgmt</artifactId>
             <version>0.2.0-SNAPSHOT</version>
         </dependency>
+        <!--
+            JMX Management Console is an optional extension and has to be added
+        -->
+        <dependency>
+            <groupId>io.inkstand</groupId>
+            <artifactId>inkstand-mgmt-jmx</artifactId>
+            <version>0.2.0-SNAPSHOT</version>
+        </dependency>
         <!-- add providers -->
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.json</artifactId>
-            <scope>test</scope>
         </dependency>
+
     </dependencies>
 
 </project>
