--- a/inkstand-parent/pom.xml
+++ b/inkstand-parent/pom.xml
@@ -94,11 +94,12 @@
         <test.jsonassert.version>1.2.3</test.jsonassert.version>
         <!-- javax library versions -->
         <javax.jcr.version>2.0</javax.jcr.version>
+        <javax.json.version>1.0</javax.json.version>
         <javax.javaee-api.version>7.0</javax.javaee-api.version>
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
         <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
         <javax.validation-api.version>1.0.0.GA</javax.validation-api.version>
-        <javax.json.version>1.0.4</javax.json.version>
+        <org.glassfish.json.version>1.0.4</org.glassfish.json.version>
         <!-- Apache Library Version -->
         <apache.commons.io.version>2.4</apache.commons.io.version>
         <apache.commons.codec.version>1.10</apache.commons.codec.version>
@@ -144,8 +145,8 @@
                 <version>${javax.validation-api.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.glassfish</groupId>
-                <artifactId>javax.json</artifactId>
+                <groupId>javax.json</groupId>
+                <artifactId>javax.json-api</artifactId>
                 <version>${javax.json.version}</version>
             </dependency>
 
@@ -241,7 +242,8 @@
             <dependency>
                 <groupId>org.glassfish</groupId>
                 <artifactId>javax.json</artifactId>
-                <version>${javax.json.version}</version>
+                <version>${org.glassfish.json.version}</version>
+                <scope>test</scope>
             </dependency>
 
             <!-- Weld CDI Container -->
