--- a/inkstand-deployments/inkstand-mgmt-jmx/pom.xml
+++ b/inkstand-deployments/inkstand-mgmt-jmx/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>inkstand-mgmt-jmx</artifactId>
+    <name>${project.groupId}:${project.artifactId}</name>
     <description>Services for JMX access via REST api. The module requires a Jax-RS implementation
         provider to be present, as it should be the case for most instances.</description>
 
