--- a/inkstand-deployments/inkstand-mgmt-jmx/pom.xml
+++ b/inkstand-deployments/inkstand-mgmt-jmx/pom.xml
@@ -32,6 +32,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>io.inkstand</groupId>
+            <artifactId>inkstand-core</artifactId>
+            <version>0.2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
         </dependency>
@@ -46,9 +51,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.inkstand</groupId>
-            <artifactId>inkstand-core</artifactId>
-            <version>0.2.0-SNAPSHOT</version>
+            <groupId>org.skyscreamer</groupId>
+            <artifactId>jsonassert</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
