--- a/inkstand-cdi/inkstand-cdi-resourceautodiscovery/pom.xml
+++ b/inkstand-cdi/inkstand-cdi-resourceautodiscovery/pom.xml
@@ -33,4 +33,11 @@
         discovery and make them injectable so that jax-rs application dont have to configure those manually.
     </description>
 
+    <dependencies>
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
