--- a/inkstand-cdi/pom.xml
+++ b/inkstand-cdi/pom.xml
@@ -41,8 +41,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
         </dependency>
     </dependencies>
 
