--- a/inkstand-it/inkstand-it-jmxmgmt/pom.xml
+++ b/inkstand-it/inkstand-it-jmxmgmt/pom.xml
@@ -31,7 +31,7 @@
     <dependencies>
         <dependency>
             <groupId>io.inkstand</groupId>
-            <artifactId>inkstand-http-undertow</artifactId>
+            <artifactId>inkstand-undertow-server</artifactId>
             <version>0.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
