--- a/inkstand-mgmt/pom.xml
+++ b/inkstand-mgmt/pom.xml
@@ -19,30 +19,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>inkstand-it</artifactId>
+        <artifactId>inkstand</artifactId>
         <groupId>io.inkstand</groupId>
         <version>0.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>inkstand-it-protectedservice</artifactId>
     <name>${project.groupId}:${project.artifactId}</name>
+    <description>Modules for managing an inkstand instance.</description>
 
-    <description>
-        Integration Test of a ProtectedService using LDAP as authentication provider.
-    </description>
+    <artifactId>inkstand-mgmt</artifactId>
+    <packaging>pom</packaging>
 
-    <dependencies>
-        <dependency>
-            <groupId>io.inkstand</groupId>
-            <artifactId>inkstand-undertow-server</artifactId>
-            <version>0.2.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>io.inkstand</groupId>
-            <artifactId>inkstand-undertow-resteasy</artifactId>
-            <version>0.2.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>inkstand-mgmt-cdi</module>
+        <module>inkstand-mgmt-jmx</module>
+    </modules>
 
 </project>
