--- a/inkstand-undertow/inkstand-undertow-staticcontent/pom.xml
+++ b/inkstand-undertow/inkstand-undertow-staticcontent/pom.xml
@@ -19,29 +19,48 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>inkstand-it</artifactId>
+        <artifactId>inkstand-deployments</artifactId>
         <groupId>io.inkstand</groupId>
         <version>0.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>inkstand-it-protectedservice</artifactId>
+    <artifactId>inkstand-undertow-staticcontent</artifactId>
     <name>${project.groupId}:${project.artifactId}</name>
 
-    <description>
-        Integration Test of a ProtectedService using LDAP as authentication provider.
-    </description>
-
     <dependencies>
+        <dependency>
+            <groupId>io.inkstand</groupId>
+            <artifactId>scribble</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.inkstand</groupId>
+            <artifactId>inkstand-core</artifactId>
+            <version>0.2.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>io.inkstand</groupId>
             <artifactId>inkstand-undertow-server</artifactId>
             <version>0.2.0-SNAPSHOT</version>
         </dependency>
+
         <dependency>
-            <groupId>io.inkstand</groupId>
-            <artifactId>inkstand-undertow-resteasy</artifactId>
-            <version>0.2.0-SNAPSHOT</version>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
+        <!-- Deltaspike -->
+        <dependency>
+            <groupId>org.apache.deltaspike.core</groupId>
+            <artifactId>deltaspike-core-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.deltaspike.core</groupId>
+            <artifactId>deltaspike-core-impl</artifactId>
         </dependency>
     </dependencies>
 
