INK-65 Multiple Application Deployments
- enhanced undertow web server provider
- upgraded to new scribble version for qualified injection support

--- a/inkstand-undertow/inkstand-undertow-staticcontent/pom.xml
+++ b/inkstand-undertow/inkstand-undertow-staticcontent/pom.xml
@@ -30,7 +30,7 @@
     <dependencies>
         <dependency>
             <groupId>io.inkstand</groupId>
-            <artifactId>scribble</artifactId>
+            <artifactId>scribble-all</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
