--- a/inkstand-it/pom.xml
+++ b/inkstand-it/pom.xml
@@ -70,7 +70,7 @@
         <!-- Minimum required inkstand dependencies-->
         <dependency>
             <groupId>io.inkstand</groupId>
-            <artifactId>scribble</artifactId>
+            <artifactId>scribble-all</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
