--- a/inkstand-jcr-jackrabbit/pom.xml
+++ b/inkstand-jcr-jackrabbit/pom.xml
@@ -89,7 +89,7 @@
 		</dependency>
 		<dependency>
             <groupId>io.inkstand</groupId>
-			<artifactId>scribble</artifactId>
+			<artifactId>scribble-all</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<!-- Jackrabbit -->
