--- a/inkstand-jcr/pom.xml
+++ b/inkstand-jcr/pom.xml
@@ -57,7 +57,7 @@
         </dependency>
 		<dependency>
             <groupId>io.inkstand</groupId>
-			<artifactId>scribble</artifactId>
+			<artifactId>scribble-all</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
