--- a/inkstand-mgmt/inkstand-mgmt-cdi/pom.xml
+++ b/inkstand-mgmt/inkstand-mgmt-cdi/pom.xml
@@ -61,7 +61,7 @@
         </dependency>
         <dependency>
             <groupId>io.inkstand</groupId>
-            <artifactId>scribble</artifactId>
+            <artifactId>scribble-all</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
