--- a/inkstand-ms/pom.xml
+++ b/inkstand-ms/pom.xml
@@ -36,7 +36,7 @@
 		</dependency>
 		<dependency>
 			<groupId>io.inkstand</groupId>
-			<artifactId>scribble</artifactId>
+			<artifactId>scribble-all</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
