--- a/inkstand-undertow/inkstand-undertow-mgmt/pom.xml
+++ b/inkstand-undertow/inkstand-undertow-mgmt/pom.xml
@@ -42,7 +42,7 @@
         </dependency>
         <dependency>
             <groupId>io.inkstand</groupId>
-            <artifactId>scribble</artifactId>
+            <artifactId>scribble-all</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
