--- a/inkstand-undertow/inkstand-undertow-resteasy/pom.xml
+++ b/inkstand-undertow/inkstand-undertow-resteasy/pom.xml
@@ -29,7 +29,7 @@
 	<dependencies>
 		<dependency>
             <groupId>io.inkstand</groupId>
-			<artifactId>scribble</artifactId>
+			<artifactId>scribble-all</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
