--- a/inkstand-undertow/inkstand-undertow-server/pom.xml
+++ b/inkstand-undertow/inkstand-undertow-server/pom.xml
@@ -29,7 +29,7 @@
 	<dependencies>
 		<dependency>
             <groupId>io.inkstand</groupId>
-			<artifactId>scribble</artifactId>
+			<artifactId>scribble-all</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -69,6 +69,11 @@
 		<dependency>
 			<groupId>org.apache.directory.api</groupId>
 			<artifactId>api-ldap-client-api</artifactId>
+		</dependency>
+		<!-- jcr -->
+		<dependency>
+			<groupId>javax.jcr</groupId>
+			<artifactId>jcr</artifactId>
 		</dependency>
 	</dependencies>
 </project>
